--- a/scss/components/_hamburger.scss
+++ b/scss/components/_hamburger.scss
@@ -1,6 +1,7 @@
 .hamburger {
 	display: block;
 	position: relative;
+	z-index: 20;
 
 	@media (min-width: $tablet-width) {
 		display: none;
@@ -20,34 +21,27 @@
 		@media (min-width: $tablet-width) {
 			display: none;
 		}
-
-		&.hamburger__toggle {
-			position: fixed;
-			top: 20px;
-			right: 10px;
-		}
 	}
 
 	&__list {
-		display: block;
-		visibility: hidden;
+		display: none;
 		position: fixed;
-		top: 0;
+		top: 60px;
 		left: 0;
 		width: 100%;
 		height: 100%;
 		margin: 0;
-		padding: 60px 10px;
+		padding: 10px;
 		background-color: #faf9f9;
 		list-style: none;
 		transition-duration: 0.3s;
 		font-size: 2rem;
 		font-weight: 500;
-		z-index: 20;
+		z-index: 35;
 	}
 
 	&__list.hamburger__toggle {
-		visibility: visible;
+		display: block;
 	}
 
 	&__item {
