--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -1,11 +1,18 @@
 .page-header {
 	height: 60px;
 	flex-shrink: 0;
+	position: relative;
 	background-color: #faf9f9;
 	box-shadow: 0px 2px 4px #e9e9e9;
+	z-index: 20;
 
 	@media (min-width: $tablet-width) {
 		height: 80px;
+	}
+
+	&.hamburger__toggle {
+		position: sticky;
+		top: 0;
 	}
 
 	&__wrapper {
