--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@ body {
   color: #222222;
 }
 
+body.hamburger__toggle {
+  overflow: hidden;
+}
+
 .container {
   max-width: 1440px;
   margin: 0 auto;
@@ -40,15 +44,23 @@ body {
   height: 60px;
   -ms-flex-negative: 0;
       flex-shrink: 0;
+  position: relative;
   background-color: #faf9f9;
   -webkit-box-shadow: 0px 2px 4px #e9e9e9;
           box-shadow: 0px 2px 4px #e9e9e9;
+  z-index: 20;
 }
 
 @media (min-width: 768px) {
   .page-header {
     height: 80px;
   }
+}
+
+.page-header.hamburger__toggle {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
 }
 
 .page-header__wrapper {
@@ -1427,6 +1439,7 @@ body {
 .hamburger {
   display: block;
   position: relative;
+  z-index: 20;
 }
 
 @media (min-width: 768px) {
@@ -1455,33 +1468,26 @@ body {
   }
 }
 
-.hamburger__btn.hamburger__toggle {
-  position: fixed;
-  top: 20px;
-  right: 10px;
-}
-
 .hamburger__list {
-  display: block;
-  visibility: hidden;
+  display: none;
   position: fixed;
-  top: 0;
+  top: 60px;
   left: 0;
   width: 100%;
   height: 100%;
   margin: 0;
-  padding: 60px 10px;
+  padding: 10px;
   background-color: #faf9f9;
   list-style: none;
   -webkit-transition-duration: 0.3s;
           transition-duration: 0.3s;
   font-size: 2rem;
   font-weight: 500;
-  z-index: 20;
+  z-index: 35;
 }
 
 .hamburger__list.hamburger__toggle {
-  visibility: visible;
+  display: block;
 }
 
 .hamburger__item {
